added new store api updates
